Add odf, blockchain

--- a/404.html
+++ b/404.html
@@ -17,7 +17,7 @@
 <link rel="shortcut icon" href="https://nancy967.github.io/images/favicon.png " type="image/x-icon">
 <link rel="icon" href="https://nancy967.github.io/images/favicon.png " type="image/x-icon">
 
-<link rel="alternate" href="/index.xml?c=00e261eb49d38d2dd1aa053ba2da54ba3da2a8f0" type="application/rss+xml" title="RSS" />
+<link rel="alternate" href="/index.xml?c=1b536b48c70b9ee7f9eb8c29f38edd05be98b326" type="application/rss+xml" title="RSS" />
 <meta property="og:title" content="404 Page not found - Nancy&#39;s blog">
 </meta>
 <meta property="og:url" content="https://nancy967.github.io/404.html">
@@ -37,8 +37,8 @@
 <meta property="og:image" content="https://nancy967.github.io/images/featured_image.jpg">
 
 
-<link rel="stylesheet" href="/css/main.css?c=00e261eb49d38d2dd1aa053ba2da54ba3da2a8f0">
-<link rel="stylesheet" href="/css/color.css?c=00e261eb49d38d2dd1aa053ba2da54ba3da2a8f0">
+<link rel="stylesheet" href="/css/main.css?c=1b536b48c70b9ee7f9eb8c29f38edd05be98b326">
+<link rel="stylesheet" href="/css/color.css?c=1b536b48c70b9ee7f9eb8c29f38edd05be98b326">
 
 
 
@@ -83,7 +83,7 @@ Page Not Found.
 	</div><div id="content-footer" class="sub">
   
   <div class="credit">
-    Copyright © 2023 <a href="https://github.com/Nancy967">Nancy967</a>, Inc.
+    © 2023 <a href="https://github.com/Nancy967">Nancy967</a>. All Rights Reserved.
   </div>
 </div></body>
 
