--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 
 <meta property="og:image" content="https://nancy967.github.io/images/featured_image.jpg">
 
+<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+
 
 <link rel="stylesheet" href="/css/main.css?c=135a4cd77cb9930391350fb08faae4f3da1756d3">
 <link rel="stylesheet" href="/css/color.css?c=135a4cd77cb9930391350fb08faae4f3da1756d3">
